--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
     "title": [
         {
             "show": true,
-            "text": "Graph-NPM Dependencies",
+            "text": "NER in text",
             "target": "blank",
             "subtarget": "blank",
             "padding": 5,
